Read teams from CSV and display in list view (#6)
* Create team_cell.xml and team_list.xml

* Implement team list

Uses hard coded list of teams
Will update to CSV

* Pull teams from CSV file and display in list view.

Co-authored-by: Justin Yeung <justinmyeung@gmail.com>

--- a/app/src/main/res/layout/team_list.xml
+++ b/app/src/main/res/layout/team_list.xml
@@ -5,10 +5,9 @@
     android:orientation = "vertical">
 
     <ListView
-        android:id="@+id/teams_list"
-        android:layout_width="wrap_content"
+        android:id="@+id/lv_teams_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@color/colorBlack"
         android:dividerHeight="1dp"
         android:footerDividersEnabled="false" />
 
