--- a/app/src/main/res/layout/team_cell.xml
+++ b/app/src/main/res/layout/team_cell.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-    <TextView
+    <TextView style="@style/tv_standard_linear_layout"
         android:id="@+id/team_number"
-        android:layout_margin="5dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1678"/>
+        android:text="FILLER TEAM" />
 
 </LinearLayout>
