Data collection UI (#8)
* Setup ui for pit collection

* Finish collection UI

* Connect TeamListActivity to CollectionActivity

* Connect TeamListActivity to CollectionActivity and display team number in collection

* Change spinner to have a background color

* Add comments

* Add comments

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
+    <color name="red">#F4CCCC</color>
+    <color name="blue">#CFE2F3</color>
+    <color name="light_gray">#E9ECEB</color>
 </resources>
