Write to file (#13)
* Convert example data to json data

* Complete writeToFile

Needs to be changed to fit with the save button

* Comment function writeToFile

--- a/app/src/main/res/layout/team_info_collection.xml
+++ b/app/src/main/res/layout/team_info_collection.xml
@@ -68,6 +68,7 @@
 
         <Button
             style="@style/btn_collection"
+            android:id="@+id/btn_save_button"
             android:text="Save"
             android:layout_margin="@dimen/very_small"/>
 
