Implement Camera/Picture function (#27)
* increase sdk version to use CameraX

* add picture_types array to populate spinner

* add purple, green, and dark gray to colors.xml

* add camera symbol into drawable directory

* create camera preview and screen layout

* create createSpinner function in a file to be referenced throughout the app

* add Camera activity and camera permissions into Manifest

* add camera button to collection screen

* implement createSpinner function and add the cameraButton

* add camera permissions into requestPermissions file

* Request Camera in TeamsListActivity
calls the RequestCamera function when the app opens

* create CameraActivity

* add compile options back into the build.gradle

* fix empty file name after team num

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="red">#F4CCCC</color>
     <color name="blue">#CFE2F3</color>
     <color name="light_gray">#E9ECEB</color>
+    <color name="purple">#D4A3F7</color>
+    <color name="green">#FFB3FFB3</color>
+    <color name="dark_gray">#AFAFAF</color>
 </resources>
