--- a/app/src/main/res/layout/team_info_collection.xml
+++ b/app/src/main/res/layout/team_info_collection.xml
@@ -3,21 +3,38 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:padding="@dimen/very_small">
 
-    <TextView
-        android:id="@+id/tv_team_number"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".5"
-        android:text="@string/team_number"
-        android:textStyle="bold"
-        android:textSize="75dp"
-        android:gravity="center"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_team_number"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/team_number"
+            android:textStyle="bold"
+            android:textSize="75dp"
+            android:gravity="center"/>
+        <ImageButton
+            android:id="@+id/btn_camera"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:gravity="center_vertical"
+            android:background="@color/green"
+            android:layout_margin="20dp"
+            android:src="@drawable/ic_action_name"
+            android:scaleType="fitCenter"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        >
 
         <ToggleButton
             style="@style/tb_collection"
