--- a/app/src/main/res/layout/team_cell.xml
+++ b/app/src/main/res/layout/team_cell.xml
@@ -6,6 +6,6 @@
 
     <TextView style="@style/tv_standard_linear_layout"
         android:id="@+id/team_number"
-        android:text="FILLER TEAM" />
+        android:text="FILLER_TEAM" />
 
 </LinearLayout>
