Update SEALs collection (#41)
* Make UI for SEAL collection

* Implement SEALS input page

Does not save to file

* Remove logs

* Add comments for file locations

* Comment name of radio btns

* Delete broken collection activity

* Update save button, variable names, and edit text

app/src/main/res/layout/seals_collection.xml

* Fix crash with no text entered

* Fix toast when climber time is missing

* Remove logs

--- a/app/src/main/res/layout/seals_collection.xml
+++ b/app/src/main/res/layout/seals_collection.xml
@@ -81,7 +81,6 @@
         android:gravity="start"
         android:inputType="textMultiLine"
         android:background="@drawable/edittext_border"
-        android:layout_margin="@dimen/very_small"/>
-
-
+        android:layout_margin="@dimen/very_small"
+        android:hint="Climber installation notes"/>
 </LinearLayout>
