--- a/app/src/main/res/layout/team_info_collection.xml
+++ b/app/src/main/res/layout/team_info_collection.xml
@@ -84,7 +84,8 @@
             android:hint="@string/motor_number"
             android:inputType="number"
             android:gravity="center"
-            android:layout_margin="@dimen/very_small"/>
+            android:layout_margin="@dimen/very_small"
+            android:maxLength="2"/>
 
         <Button
             style="@style/btn_collection"
