--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="purple">#D4A3F7</color>
     <color name="green">#FFB3FFB3</color>
     <color name="dark_gray">#AFAFAF</color>
+    <color name="yellow">#FFF5D6</color>
 </resources>
