--- a/app/src/main/res/layout/team_cell.xml
+++ b/app/src/main/res/layout/team_cell.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <TextView style="@style/tv_standard_linear_layout"
+    <TextView
+        style="@style/tv_standard_linear_layout"
         android:id="@+id/team_number"
         android:text="FILLER_TEAM" />
 
