--- a/app/src/main/res/layout/camera_confirmation_activity.xml
+++ b/app/src/main/res/layout/camera_confirmation_activity.xml
@@ -7,16 +7,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:orientation="vertical"
+        android:layout_weight="2">
 
         <TextView
             android:id="@+id/tv_team_number_confirm"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:textSize="50dp"
-            android:text="1678"
+            android:padding="15dp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/tv_picture_type"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textSize="30dp"
             android:padding="15dp"
             android:textAlignment="center" />
 
@@ -26,7 +34,7 @@
         android:id="@+id/iv_picture_confirm"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6" />
+        android:layout_weight="5" />
 
     <LinearLayout
         android:layout_width="match_parent"
